# storesource

automatic_crew_for_european_fashion_sales_network/: README.md  pyproject.toml
automatic_crew_for_european_fashion_sales_network/src/automatic_crew_for_european_fashion_sales_network/: crew.py
automatic_crew_for_european_fashion_sales_network/src/automatic_crew_for_european_fashion_sales_network/config/: agents.yaml  tasks.yaml
src/automatic_crew_for_european_fashion_sales_network/: main.py
